--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,34 @@
  */
 
  body {
-   font-family: 'Patrick Hand SC', cursive;
-   font-size: 28px;
+   font-family: 'Poiret One', cursive;
+   font-size: 34px;
+   font-weight: bold;
+   min-height: 100%;
  }
+
+#content {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: fixed;
+   padding: 0;
+   margin: 0;
+
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+
+}
+
+.venue-parent-view {
+
+}
+
+.venue-details {
+}
+
+a:link {
+   text-decoration: none;
+}
