--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,13 @@
 }
 
 .venue-parent-view {
-
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+   width: 45%;
+   height: 45%;
+   text-align: center;
 }
 
 .venue-details {
