--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,11 @@
  *= require_self
  */
 
- body {
+* {
    font-family: 'Poiret One', cursive;
+}
+
+body {
    font-size: 34px;
    font-weight: bold;
    min-height: 100%;
@@ -51,4 +54,13 @@
 
 a:link {
    text-decoration: none;
+}
+
+button {
+   font-size: 40px;
+   background-color: #e7e7e7;
+}
+
+.cutlery-icon {
+   margin-bottom: 5%;
 }
