--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,11 @@
 <head>
   <title>LunchRoulette</title>
   <%= stylesheet_link_tag    'application', media: 'all'  %>
+  <%= javascript_include_tag 'https://use.fontawesome.com/2c5cd5df6a.js' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+  
 </head>
 <body>
 
