--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,6 +59,11 @@ a:link {
 button {
    font-size: 40px;
    background-color: #e7e7e7;
+   border-radius: 4px;
+   border: none;
+   padding: 1%;
+   cursor: pointer;
+   cursor: hand;
 }
 
 .cutlery-icon {
