added footer, more css

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,2 @@
 <div id="content"></div>
+<div id="footer">Powered by <a href="https://developer.foursquare.com/" target="_blank">Foursquare</a></div>
