--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,3 +69,11 @@ button {
 .cutlery-icon {
    margin-bottom: 5%;
 }
+
+#footer {
+   font-size: 12px;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
+}
